# gs

./: Cargo.toml  README.md
src/: config.rs  dirs.rs  expand.rs  main.rs  status.rs
