[package]
name = "gs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
regex=  "1.10.2"
shellexpand = "3.0"
toml =  "0.8.8"
serde = { version="1.0.188", features=[ "derive" ]}
itertools="*"
dirs = "5.0"
log = "0.4.20"
anyhow = "1.0.75"
simple_logger = "4.2.0"

[profile.final]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false


